kubernetes/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-service
  namespace: services
  labels:
    app: homepage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage-service
  template:
    metadata:
      labels:
        app: homepage-service
    spec:
      containers:
        - name: homepage-service
          image: docker.rcomanne.nl/homepage-service:latest
          ports:
            - name: web
              containerPort: 8080
            - name: actuator
              containerPort: 8081
        - name: database
          image: postgres:13-alpine
          ports:
            - name: database
              containerPort: 5432
      imagePullSecrets:
        - name: private-registry
