kubernetes/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: services
  labels:
    app: homepage-service
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: web
  selector:
    app: homepage-service
